fix: post and comment scroll and overflow issues

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -393,3 +393,7 @@ textarea.input {
 .xlog-lottie-logo path[fill="rgb(0,0,0)"] {
   @apply fill-current;
 }
+
+.katex-html {
+  @apply overflow-x-auto;
+}
